--- a/feature/find-password/src/main/res/values/strings.xml
+++ b/feature/find-password/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="error_number_not_valid">잘못된 인증번호입니다</string>
     <string name="error_verify_number">인증이 실패했습니다</string>
     <string name="certified">인증</string>
+    <string name="resend_completion">재발송 완료</string>
+    <string name="resend_completion_description">인증번호를 재발송했어요.\n이메일을 확인해주세요!</string>
 </resources>
