--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="find_password">비밀번호 찾기</string>
 
     <string name="time_expired">시간이 만료되었습니다</string>
-    <string name="password_conditions">·  대/소문자, 특수문자 6~15자</string>
+    <string name="password_conditions">·&#160;&#160;&#160;대/소문자, 숫자, 특수문자 포함 6자 이상</string>
 
     <string name="resending">재발송</string>
 
