:lipstick: :: Save qrcode result string

--- a/feature/qrcode/src/main/res/values/strings.xml
+++ b/feature/qrcode/src/main/res/values/strings.xml
@@ -5,11 +5,17 @@
     <string name="outing_qrcode_image">외출 QR 이미지</string>
     <string name="error_get_outing_uuid">QR 생성이 실패했습니다</string>
 
-    <string name="success_qr_scan">QR코드 스캔 성공</string>
-    <string name="start_outing">외출을 시작해요!\n7시 25분까지는 반으로 돌아와야 해요!</string>
-    <string name="back_outing">제 시간에 복귀에 성공했어요!\n다음 외출제에 또 만나요!</string>
-    <string name="fail_qr_scan">QR코드 스캔 실패</string>
-    <string name="error_blacklist">외출 금지 상태에서는\nQR스캔을 할 수 없어요.</string>
-    <string name="error_outing">예기치 못한 오류가 발생했어요.\n다시 시도해 주세요.</string>
+    <string name="success_qrcode">외출을 시작해 봐요!</string>
+    <string name="success_qrcode_description">지금부터 외출하실 수 있어요.\n7시 25분 이전에 복귀해 주세요!</string>
+    <string name="success_return">복귀에 성공했어요!</string>
+    <string name="success_return_description">제 때 복귀하셨군요!\n다음 외출제 때 또 만나요!</string>
+    <string name="late_outing">지각하셨네요..</string>
+    <string name="late_outing_description">앞으로 1주간 외출을 하실 수 없어요.\n다음엔 늦지 마세요!</string>
+    <string name="fail_qrcode">외출에 실패했어요..</string>
+    <string name="fail_qrcode_description">예기치 못한 오류가 발생했어요.\n다시 시도해 주세요!</string>
+    <string name="no_outing">외출하실 수 없어요</string>
+    <string name="no_outing_description">외출 금지 상태에서는 외출이 불가능합니다.\n다음 외출제를 이용해 주세요.</string>
     <string name="check">확인</string>
+    <string name="back_camera">카메라로 돌아가기</string>
+    <string name="back_home">홈으로 돌아가기</string>
 </resources>
