--- a/feature/setting/src/main/res/values/strings.xml
+++ b/feature/setting/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="setting_screen">SettingScreen</string>
+
     <string name="reset_password">비밀번호 재설정</string>
     <string name="now_password">현재 비밀번호</string>
 
